# club-portal-backend

./: .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.debug.yml  docker-compose.network.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  nginx.dev.conf  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  requirements.prod.txt  requirements.txt  sample.env
.github/workflows/: build-docker.yml  code-check.yml  code-lint.yml  django-test.yml  push-docker.yml  push-docs.yml
app/: .flake8  gunicorn.conf.py  manage.py  pyproject.toml  uwsgi.ini
app/analytics/: admin.py  apis.py  consumers.py  models.py  routing.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py  viewsets.py
app/analytics/migrations/: 0005_alter_link_target_url.py  0006_link_is_tracked.py  0007_alter_link_is_tracked.py
app/analytics/tests/: test_link_views.py
app/app/: asgi.py  routing.py  settings.py  urls.py
app/clubs/: admin.py  apis.py  apps.py  cache.py  consts.py  defaults.py  forms.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  validators.py  views.py  viewsets.py
app/clubs/migrations/: 0023_remove_eventattendance_event_and_more.py  0024_alter_clubsocialprofile_url.py  0025_alter_clubtag_name.py  0026_alter_club_options_and_more.py  0027_alter_clubsocialprofile_username.py  0028_teamrole_teammembership_roles_and_more.py  0029_remove_clubmembership_only_one_owner_per_club_and_more.py  0030_alter_clubsocialprofile_social_type.py  0031_clubapikey_clubapikey_unique_apikey_name_per_club.py  0032_alter_clubapikey_user_agent.py  0033_clubmembership_is_admin.py  0034_club_banner_clubphoto_and_more.py  0035_alter_clubapikey_options_alter_clubapikey_user_agent.py  0035_club_acronym_club_category_ids_club_date_created_and_more.py  0035_club_color.py  0036_alter_club_name_alter_clubsocialprofile_social_type.py  0036_teammembership_order_override_teamrole_order.py  0037_alter_club_alias.py  0037_alter_clubsocialprofile_options_and_more.py  0038_club_instagram_followers_alter_club_acronym_and_more.py  0038_clubfile_delete_clubphoto.py  0039_clubphoto_clubphoto_unique_order_per_club.py  0040_alter_clubfile_file.py  0041_club_color.py  0041_remove_club_banner_remove_club_logo.py  0042_alter_club_banner_alter_club_logo.py  (+26 more)
app/core/: admin.py  backend.py  middleware.py  models.py  serializers.py  storage.py  tasks.py  typegen.py  urls.py  views.py
app/events/: admin.py  apis.py  apps.py  cache.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py  viewsets.py
app/fixtures/: event-analytics-test-data.json
app/lib/: allauth.py  celery.py  countries.py  emails.py  faker.py  qrcodes.py  serializer_typegen.py  spreadsheets.py  ts_generator.py
app/polls/: admin.py  apis.py  apps.py  cache.py  consumers.py  models.py  permissions.py  routing.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py  viewsets.py
app/querycsv/: admin.py  consumers.py  forms.py  models.py  routing.py  serializers.py  services.py  signals.py  tasks.py  views.py
app/users/: admin.py  apis.py  apps.py  defaults.py  forms.py  models.py  serializers.py  services.py  signals.py  urls.py  utils.py  views.py  viewsets.py
app/utils/: admin.py  cache.py  dates.py  db.py  files.py  formatting.py  helpers.py  images.py  loaders.py  logging.py  models.py  permissions.py  testing.py  types.py  urls.py  views.py
deploy/proxy/: default.conf.tpl
docs/: Authentication.md  Emails.md  conf.py  index.rst
docs/pages/: Authentication.md  Authorization.md  Conventions.md  Emails.md  Permissions.md  Resources.md
scripts/: backup-db.sh  clear-old-backups.sh  entrypoint.sh  healthcheck.sh  pull-s3-backup.sh  pull-s3-files.sh  restore-db.sh
(+250 files in other folders)
