[project]
name = "club-portal-backend"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    # Django, DRF, and base packages
    "django>=5.2.7,<5.3",
    "django-admin-tools>=0.9.3,<1.0",
    "django-cors-headers>=4.9.0,<4.10",
    "django-filter>=25.1,<26.0",
    "django-storages>=1.14.6,<1.15",
    "djangorestframework>=3.16.1,<3.17",
    "drf-spectacular>=0.28.0,<0.29",
    "drf-standardized-errors>=0.15.0,<0.16",
    "requests>=2.31.0,<2.33",
    "pillow>=11.3.0,<11.4",
    "typing-extensions>=4.15.0,<4.16",
    "attr>=0.3.2,<0.4",
    # CSV Files
    "pandas>=2.3.3,<2.4",
    "xlsxwriter>=3.2.9,<3.3",
    "pathlib>=1.0.1,<1.1",
    # OAuth
    "django-allauth>=65.11.2,<65.12",
    "pyjwt>=2.10.1,<2.11",
    "requests-oauthlib>=2.0.0,<2.1",
    "python3-openid>=3.2.0,<3.3",
    "python3-saml>=1.16.0,<1.17",
    "cryptography>=46.0.2,<47.0",
    # QRCodes
    "segno>=1.6.6,<1.7",
    # Celery & Cache
    "celery>=5.5.3,<5.6",
    "redis>=6.4.0,<6.5",
    "django-redis>=6.0.0,<6.1",
    "django-celery-beat>=2.8.1,<2.9",
    # ICS & Calendar files
    "icalendar>=6.3.1,<6.4",
    # JSON Lexer for admin
    "pygments>=2.19.2,<2.20",
    # ASGI Server
    "uvicorn[standard]>=0.37.0,<0.38",
    "uvicorn-worker>=0.4.0,<0.5",
    "gunicorn>=23.0.0,<23.1",
    # Channels
    "channels>=4.3.1,<4.4",
    "channels-redis>=4.3.0,<4.4",
]

[dependency-groups]
dev = [
    # Linting & Formatting
    "autoflake>=2.3.1,<2.4",
    "black>=24.1.1,<25.2",
    "isort>=5.13.2,<5.14",
    "ruff>=0.13.3,<0.14",
    # Testing
    "coverage>=7.4.1,<7.5",
    "faker>=33.0.0,<33.1.0",
    "freezegun>=1.5.4,<1.6",
    # Django Extensions
    "django-browser-reload>=1.17.0,<1.18",
    "django-debug-toolbar>=6.1.0,<6.2",
    "django-extensions>=3.2.3,<3.3",
    # Documentation
    "sphinx>=8.2.3,<8.3",
    "sphinx-autobuild>=2024.10.3,<2024.11",
    "sphinx-book-theme>=1.1.4,<1.2",
    "sphinx-rtd-theme>=3.0.2,<3.1",
    "myst-parser>=4.0.1,<4.1",
]
prod = [
    # AWS S3
    "boto3>=1.40.42,<1.41",
    # Postgres & Server
    "psycopg[c,pool]>=3.2.6,<3.3",
    # Sentry
    "sentry-sdk>=2.39.0,<2.40",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
skip = ['migrations']

[tool.coverage.run]
# source = ['./app']
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "if 0:",
    "if __name__ == .__main__.:",
    "if __name__ == '.__main__'.:",
    "if __name__ == \"__main__\":",
    "if __name__ == \"__main__\":",
    "if __name__ == '__main__':",
    "def __str__",
]
fail_under = 100
omit = ['*/migrations/*', '*/tests/*', '*/__init__.py', '*/admin.py', '*/apps.py', '*/urls.py', '*/wsgi.py', '*/settings.py', '*/asgi.py', '*/manage.py',  '*/tests.py', '*/lib/*', '*/mock/*']
sort = "Cover"


[tool.ruff]
target-version = "py313"
exclude = ['migrations', '__pycache__', 'manage.py']

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "UP045", # Use `X | None` for type annotations
    "UP031", # Allow % symbol for formatting, aligns with django conventions
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true




